--- a/notebooks/Keywords.ipynb
+++ b/notebooks/Keywords.ipynb
@@ -19,7 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df=get_ballitore_data()\n",
+    "df=get_data()\n",
     "df_smpl = df # ..."
    ]
   },
