--- a/notebooks/NER.ipynb
+++ b/notebooks/NER.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -29,8 +29,9 @@
      "output_type": "stream",
      "text": [
       "Collecting en-core-web-sm==3.7.1\n",
-      "  Using cached https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl (12.8 MB)\n",
-      "Requirement already satisfied: spacy<3.8.0,>=3.7.2 in /Users/ryan/github/ballitoreproject/venv/lib/python3.10/site-packages (from en-core-web-sm==3.7.1) (3.7.5)\n",
+      "  Downloading https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl (12.8 MB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m12.8/12.8 MB\u001b[0m \u001b[31m55.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m0:01\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: spacy<3.8.0,>=3.7.2 in /Users/ryan/github/ballitoreproject/venv/lib/python3.10/site-packages (from en-core-web-sm==3.7.1) (3.7.5)\n",
       "Requirement already satisfied: spacy-legacy<3.1.0,>=3.0.11 in /Users/ryan/github/ballitoreproject/venv/lib/python3.10/site-packages (from spacy<3.8.0,>=3.7.2->en-core-web-sm==3.7.1) (3.0.12)\n",
       "Requirement already satisfied: spacy-loggers<2.0.0,>=1.0.0 in /Users/ryan/github/ballitoreproject/venv/lib/python3.10/site-packages (from spacy<3.8.0,>=3.7.2->en-core-web-sm==3.7.1) (1.0.5)\n",
       "Requirement already satisfied: murmurhash<1.1.0,>=0.28.0 in /Users/ryan/github/ballitoreproject/venv/lib/python3.10/site-packages (from spacy<3.8.0,>=3.7.2->en-core-web-sm==3.7.1) (1.0.10)\n",
@@ -84,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +94,7 @@
        "This will be handed thee I suppose by Cd Morgan who intends for Clonmel tomorrow"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +136,7 @@
        "['Clonmel']"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +160,7 @@
        "['Cd Morgan']"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,15 +175,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 4560/4560 [00:03<00:00, 1275.10it/s]\n",
-      "100%|██████████| 4560/4560 [00:03<00:00, 1306.69it/s]\n"
+      "100%|██████████| 4560/4560 [00:03<00:00, 1320.66it/s]\n",
+      "100%|██████████| 4560/4560 [00:03<00:00, 1351.55it/s]\n"
      ]
     },
     {
@@ -308,12 +309,13 @@
        "[4560 rows x 2 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "df_smpl = get_data()\n",
     "df_smpl['places']=[get_named_places_for_id(id) for id in tqdm(df_smpl.index)]\n",
     "df_smpl['people']=[get_named_people_for_id(id) for id in tqdm(df_smpl.index)]\n",
     "df_smpl[['places','people']]"
@@ -321,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +357,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +403,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,164 +415,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !pip install geopy\n",
-    "from geopy.geocoders import Nominatim\n",
-    "geolocator = Nominatim(user_agent=\"ballitoreproject\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "loc=geolocator.geocode('Clonmel')\n",
-    "loc"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "loc.raw"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "geolocator.geocode('Clonmel', exactly_one=False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "geolocator.geocode('Waterford', exactly_one=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# !pip install diskcache"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import diskcache as dc\n",
-    "cache_obj = dc.Cache(os.path.join(PATH_DATA,'geocache'))\n",
+    "from ballitoreproject.networks import plot_network\n",
     "\n",
-    "@cache_obj.memoize()\n",
-    "def get_place_data(placename):\n",
-    "    loc = geolocator.geocode(placename)\n",
-    "    if not loc: return {}\n",
-    "    outd = {**loc.raw}\n",
-    "    outd['lat']=float(outd['lat'])\n",
-    "    outd['lon']=float(outd['lon'])\n",
-    "    return outd\n",
+    "import networkx as nx\n",
+    "G=nx.Graph()\n",
+    "for ppl in tqdm(df_smpl.people):\n",
+    "    for person1 in ppl:\n",
+    "        for person2 in ppl:\n",
+    "            if person1<person2:\n",
+    "                G.add_edge(person1,person2)\n",
     "\n",
-    "get_place_data('Clonmel')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# places_ld=[]\n",
-    "# for place,count in tqdm(list(all_places.items())):\n",
-    "#     place_d={'place':place, 'count':count, **get_place_data(place)}\n",
-    "#     places_ld.append(place_d)\n",
-    "# places_df=pd.DataFrame(places_ld).dropna()\n",
-    "# places_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# !pip install folium"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import folium\n",
-    "\n",
-    "def create_map_with_markers(df):\n",
-    "    \"\"\"\n",
-    "    Creates a folium map with markers sized proportionally to the count values in the DataFrame.\n",
-    "    \n",
-    "    Parameters:\n",
-    "    df (pd.DataFrame): DataFrame containing 'place', 'count', 'lat', 'lon' columns.\n",
-    "    \n",
-    "    Returns:\n",
-    "    folium.Map: Interactive map with markers.\n",
-    "    \"\"\"\n",
-    "    # Create a folium map centered around the mean latitude and longitude\n",
-    "    map_center = [df['lat'].mean(), df['lon'].mean()]\n",
-    "    fmap = folium.Map(location=map_center, zoom_start=2)\n",
-    "\n",
-    "    # Define a function to scale the marker sizes\n",
-    "    def scale_size(count, min_count, max_count, min_size=3, max_size=15):\n",
-    "        return ((count - min_count) / (max_count - min_count)) * (max_size - min_size) + min_size\n",
-    "\n",
-    "    # Get min and max count values for scaling\n",
-    "    min_count = df['count'].min()\n",
-    "    max_count = df['count'].max()\n",
-    "\n",
-    "    # Add markers to the map\n",
-    "    for _, row in df.iterrows():\n",
-    "        marker_size = scale_size(row['count'], min_count, max_count)\n",
-    "        folium.CircleMarker(\n",
-    "            location=(row['lat'], row['lon']),\n",
-    "            radius=marker_size,\n",
-    "            popup=f\"{row['place']}: {row['count']}\",\n",
-    "            color='blue',\n",
-    "            fill=True,\n",
-    "            fill_color='blue'\n",
-    "        ).add_to(fmap)\n",
-    "\n",
-    "    return fmap\n",
-    "\n",
-    "fmap = create_map_with_markers(places_df)\n",
-    "fmap\n"
+    "plot_network(G)"
    ]
   },
   {
