--- a/notebooks/NER.ipynb
+++ b/notebooks/NER.ipynb
@@ -9,19 +9,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
     "sys.path.append('..')\n",
     "from ballitoreproject import *\n",
+    "from ballitoreproject.networks import plot_network\n",
+    "\n",
     "from ballitoreproject.geography import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +32,7 @@
      "text": [
       "Collecting en-core-web-sm==3.7.1\n",
       "  Downloading https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl (12.8 MB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m12.8/12.8 MB\u001b[0m \u001b[31m55.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m0:01\u001b[0m\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m12.8/12.8 MB\u001b[0m \u001b[31m39.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
       "\u001b[?25hRequirement already satisfied: spacy<3.8.0,>=3.7.2 in /Users/ryan/github/ballitoreproject/venv/lib/python3.10/site-packages (from en-core-web-sm==3.7.1) (3.7.5)\n",
       "Requirement already satisfied: spacy-legacy<3.1.0,>=3.0.11 in /Users/ryan/github/ballitoreproject/venv/lib/python3.10/site-packages (from spacy<3.8.0,>=3.7.2->en-core-web-sm==3.7.1) (3.0.12)\n",
       "Requirement already satisfied: spacy-loggers<2.0.0,>=1.0.0 in /Users/ryan/github/ballitoreproject/venv/lib/python3.10/site-packages (from spacy<3.8.0,>=3.7.2->en-core-web-sm==3.7.1) (1.0.5)\n",
@@ -85,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +96,7 @@
        "This will be handed thee I suppose by Cd Morgan who intends for Clonmel tomorrow"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +138,7 @@
        "['Clonmel']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +162,7 @@
        "['Cd Morgan']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,8 +184,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 4560/4560 [00:03<00:00, 1320.66it/s]\n",
-      "100%|██████████| 4560/4560 [00:03<00:00, 1351.55it/s]\n"
+      "100%|██████████| 4560/4560 [00:03<00:00, 1246.35it/s]\n",
+      "100%|██████████| 4560/4560 [00:03<00:00, 1349.12it/s]\n"
      ]
     },
     {
@@ -415,20 +417,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 4560/4560 [00:00<00:00, 8945.14it/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(61, 200)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "from ballitoreproject.networks import plot_network\n",
     "\n",
     "import networkx as nx\n",
     "G=nx.Graph()\n",
     "for ppl in tqdm(df_smpl.people):\n",
+    "    ppl = [x for x in ppl if x in all_people.head(100).index]\n",
     "    for person1 in ppl:\n",
     "        for person2 in ppl:\n",
     "            if person1<person2:\n",
-    "                G.add_edge(person1,person2)\n",
+    "                if G.has_edge(person1,person2):\n",
+    "                    G.edges[person1,person2]['weight']+=1\n",
+    "                else:\n",
+    "                    G.add_edge(person1,person2,weight=1)\n",
     "\n",
+    "def filter_top_n_edges(G, n):\n",
+    "    # Sort edges by weight in descending order\n",
+    "    sorted_edges = sorted(G.edges(data=True), key=lambda x: x[2]['weight'], reverse=True)\n",
+    "    \n",
+    "    # Keep only the top N edges\n",
+    "    top_edges = sorted_edges[:n]\n",
+    "    \n",
+    "    # Create a new graph with only the top N edges\n",
+    "    H = nx.Graph()\n",
+    "    for edge in top_edges:\n",
+    "        H.add_edge(edge[0], edge[1], weight=edge[2]['weight'])\n",
+    "    \n",
+    "    return H\n",
+    "\n",
+    "G=filter_top_n_edges(G, 200)\n",
+    "G.order(),G.size()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f0f35a9cf08d4e9986d43ae4aa317301",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "CytoscapeWidget(cytoscape_layout={'name': 'cola'}, cytoscape_style=[{'selector': 'node', 'style': {'content': …"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "plot_network(G)"
    ]
   },
