--- a/notebooks/CorpusPreprocessing.ipynb
+++ b/notebooks/CorpusPreprocessing.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,14 +29,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2983/2983 [00:04<00:00, 664.10it/s] \n"
+      "100%|██████████| 2983/2983 [00:04<00:00, 668.74it/s] \n"
      ]
     },
     {
@@ -71,9 +71,11 @@
        "      <th>year</th>\n",
        "      <th>decade</th>\n",
        "      <th>is_journal</th>\n",
+       "      <th>sender_recip</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>id</th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -101,6 +103,7 @@
        "      <td>1789</td>\n",
        "      <td>1780</td>\n",
        "      <td>False</td>\n",
+       "      <td>Richard Grubb to Richard Shackleton</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mss4-b3-f2-001</th>\n",
@@ -115,6 +118,7 @@
        "      <td>1792</td>\n",
        "      <td>1790</td>\n",
        "      <td>False</td>\n",
+       "      <td>Samuel Grubb to Richard Shackleton</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mss4-b3-f3-001</th>\n",
@@ -129,6 +133,7 @@
        "      <td>1789</td>\n",
        "      <td>1780</td>\n",
        "      <td>False</td>\n",
+       "      <td>Sarah Grubb to Richard Shackleton</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mss4-b3-f4-001</th>\n",
@@ -143,6 +148,7 @@
        "      <td>1781</td>\n",
        "      <td>1780</td>\n",
        "      <td>False</td>\n",
+       "      <td>Sarah Tuke Grubb to Richard Shackleton</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mss4-b3-f4-002</th>\n",
@@ -157,9 +163,11 @@
        "      <td>1781</td>\n",
        "      <td>1780</td>\n",
        "      <td>False</td>\n",
+       "      <td>Sarah Tuke Grubb to Richard Shackleton</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -185,6 +193,7 @@
        "      <td>1792</td>\n",
        "      <td>1790</td>\n",
        "      <td>False</td>\n",
+       "      <td>Margaret Shackleton Grubb to Richard Shackleton</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mss4-b2-f24-048</th>\n",
@@ -199,6 +208,7 @@
        "      <td>1792</td>\n",
        "      <td>1790</td>\n",
        "      <td>False</td>\n",
+       "      <td>Margaret Shackleton Grubb to Richard Shackleton</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mss4-b2-f24-049</th>\n",
@@ -213,6 +223,7 @@
        "      <td>1792</td>\n",
        "      <td>1790</td>\n",
        "      <td>False</td>\n",
+       "      <td>Margaret Shackleton Grubb to Richard Shackleton</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mss4-b2-f24-050</th>\n",
@@ -227,6 +238,7 @@
        "      <td>1792</td>\n",
        "      <td>1790</td>\n",
        "      <td>False</td>\n",
+       "      <td>Margaret Shackleton Grubb to Richard Shackleton</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mss4-b2-f24-051</th>\n",
@@ -241,10 +253,11 @@
        "      <td>1792</td>\n",
        "      <td>1790</td>\n",
        "      <td>False</td>\n",
+       "      <td>Margaret Shackleton Grubb to Richard Shackleton</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2983 rows × 11 columns</p>\n",
+       "<p>2983 rows × 12 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -276,24 +289,38 @@
        "mss4-b2-f24-050            Clonmel                  Ballitore          2   \n",
        "mss4-b2-f24-051            Clonmel                  Ballitore          2   \n",
        "\n",
-       "                  datetime  year  decade  is_journal  \n",
-       "id                                                    \n",
-       "mss4-b3-f1-001  1789-03-19  1789    1780       False  \n",
-       "mss4-b3-f2-001  1792-03-14  1792    1790       False  \n",
-       "mss4-b3-f3-001  1789-12-24  1789    1780       False  \n",
-       "mss4-b3-f4-001  1781-06-12  1781    1780       False  \n",
-       "mss4-b3-f4-002  1781-08-13  1781    1780       False  \n",
-       "...                    ...   ...     ...         ...  \n",
-       "mss4-b2-f24-047 1792-01-18  1792    1790       False  \n",
-       "mss4-b2-f24-048 1792-02-20  1792    1790       False  \n",
-       "mss4-b2-f24-049 1792-04-24  1792    1790       False  \n",
-       "mss4-b2-f24-050 1792-06-16  1792    1790       False  \n",
-       "mss4-b2-f24-051 1792-08-19  1792    1790       False  \n",
+       "                  datetime  year  decade  is_journal  \\\n",
+       "id                                                     \n",
+       "mss4-b3-f1-001  1789-03-19  1789    1780       False   \n",
+       "mss4-b3-f2-001  1792-03-14  1792    1790       False   \n",
+       "mss4-b3-f3-001  1789-12-24  1789    1780       False   \n",
+       "mss4-b3-f4-001  1781-06-12  1781    1780       False   \n",
+       "mss4-b3-f4-002  1781-08-13  1781    1780       False   \n",
+       "...                    ...   ...     ...         ...   \n",
+       "mss4-b2-f24-047 1792-01-18  1792    1790       False   \n",
+       "mss4-b2-f24-048 1792-02-20  1792    1790       False   \n",
+       "mss4-b2-f24-049 1792-04-24  1792    1790       False   \n",
+       "mss4-b2-f24-050 1792-06-16  1792    1790       False   \n",
+       "mss4-b2-f24-051 1792-08-19  1792    1790       False   \n",
        "\n",
-       "[2983 rows x 11 columns]"
+       "                                                    sender_recip  \n",
+       "id                                                                \n",
+       "mss4-b3-f1-001               Richard Grubb to Richard Shackleton  \n",
+       "mss4-b3-f2-001                Samuel Grubb to Richard Shackleton  \n",
+       "mss4-b3-f3-001                 Sarah Grubb to Richard Shackleton  \n",
+       "mss4-b3-f4-001            Sarah Tuke Grubb to Richard Shackleton  \n",
+       "mss4-b3-f4-002            Sarah Tuke Grubb to Richard Shackleton  \n",
+       "...                                                          ...  \n",
+       "mss4-b2-f24-047  Margaret Shackleton Grubb to Richard Shackleton  \n",
+       "mss4-b2-f24-048  Margaret Shackleton Grubb to Richard Shackleton  \n",
+       "mss4-b2-f24-049  Margaret Shackleton Grubb to Richard Shackleton  \n",
+       "mss4-b2-f24-050  Margaret Shackleton Grubb to Richard Shackleton  \n",
+       "mss4-b2-f24-051  Margaret Shackleton Grubb to Richard Shackleton  \n",
+       "\n",
+       "[2983 rows x 12 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
